hard-gists/d85b17e6e13fd8dcad7cf51d1c6b3a1c/run.log
=== Docker Run Log for d85b17e6e13fd8dcad7cf51d1c6b3a1c ===
Started at: Mi 29. Okt 20:28:07 CET 2025

[2025-10-29 20:28:07] START: Running container for d85b17e6e13fd8dcad7cf51d1c6b3a1c
[2025-10-29 20:28:07] SUCCESS: Container 24b23076fadcc58579b0c7ac0d64670198fd760553ad3b4d4f63ec4c35ec07a4 started for d85b17e6e13fd8dcad7cf51d1c6b3a1c
=== Container logs for d85b17e6e13fd8dcad7cf51d1c6b3a1c ===
  File "/snippet.py", line 70
    print json.dumps(kextsThatWillMakeAnAdminCry, indent=4, sort_keys=True)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d85b17e6e13fd8dcad7cf51d1c6b3a1c ===
[2025-10-29 20:28:09] INFO: Container 24b23076fadcc58579b0c7ac0d64670198fd760553ad3b4d4f63ec4c35ec07a4 has stopped
